samples/_failures_safe/1761409277_0f9ebd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2041aedb.c: In function ‘skip_whitespace_and_comments’:
./samples/SAFE/__tmp_2041aedb.c:149:21: error: expected declaration or statement at end of input
  149 |                     (*column)++;
      |                     ^
./samples/SAFE/__tmp_2041aedb.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2041aedb.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2041aedb.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2041aedb.c:149:21: error: expected declaration or statement at end of input
